packages/store/kustomize/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: next-store
  labels:
    app: next-store
spec:
  replicas: 3
  revisionHistoryLimit: 10
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app: next-store
  template:
    metadata:
      labels:
        app: next-store
    spec:
      restartPolicy: Always
      containers:
      - name: next-store
        image: asia.gcr.io/instant-matter-785/next-store:tag
        livenessProbe:
          httpGet:
            path: /healthz
            port: 14401
          initialDelaySeconds: 15
          periodSeconds: 3
        readinessProbe:
          httpGet:
            path: /healthz
            port: 14401
          initialDelaySeconds: 15
          periodSeconds: 3
        ports:
        - containerPort: 14401
          name: http-port
