packages/store/kustomize/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: next-store
  name: next-store
  namespace: default
spec:
  ports:
  - name: http-port
    port: 14401
    protocol: TCP
    targetPort: 14401
  selector:
    app: next-store
