packages/store/kustomize/base/virtualservice.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: next-store-virtualservice
  namespace: default
spec:
  http:
  - route:
    - destination:
        host: next-store
        port:
          number: 14401
